syntax = "proto3";

package management;

message Node {
    uint64 id = 1;
    string address = 2;
}

message AddLearnerRequest {
    Node node = 1;
}

message ChangeMembershipRequest {
    repeated uint64 nodes = 1;
}

message ResultResponse {
    bool success = 1;
    string message = 2;
}

service ClusterManagement {
    rpc InitCluster(Node) returns (ResultResponse);
    rpc AddLearner(AddLearnerRequest) returns (ResultResponse);
    rpc ChangeMembership(ChangeMembershipRequest) returns (ResultResponse);
}
